--- a/packages/theme/src/style.css
+++ b/packages/theme/src/style.css
@@ -38,4 +38,13 @@
   .ui-scale-container {
     @apply grid grid-cols-12 gap-2;
   }
+
+  .ui-typography {
+    @apply flex text-xl
+  }
+
+  .ui-typography {
+    @apply flex text-xl;
+    flex: 1;
+  }
 }
